--- a/style.css
+++ b/style.css
@@ -110,3 +110,12 @@ main {
 #movie-info button:hover {
     background-color: #9d0b51;
 }
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+footer p {
+    margin: 0;
+}
